--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.28",
     "@types/react": "^17.0.27",
+    "@types/react-bootstrap": "^0.32.27",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.19",
     "@types/react-router-dom": "^5.3.1",
