--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.22.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
